# t5ynth

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DO_NOT_FORGET.txt  HANDOVER_AUDIOLDM2.md  HANDOVER_SESSION_2026-04-11.md  HANDOVER_SESSION_2026-04-13.md  LICENSE.txt  PYINSTALLER_DIFFUSERS_GUIDE.md  README.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_LICENSES.txt
.claude/projects/-Users-joerissen-ai-t5ynth/memory/: feedback_no_unsolicited_ui.md
.github/: pull_request_template.md  release_notes_header.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
backend/: config.py  pipe_inference.py  pipe_inference.spec  requirements-torch-blackwell.txt  requirements.txt  runtime_hook.py  server.py
backend/data/: pca_components.pt
backend/routes/: cross_aesthetic_routes.py
backend/services/: cross_aesthetic_backend.py  stable_audio_backend.py
docs/: ADDING_A_MODEL.md  ADDING_A_MODULATION_TARGET.md  CUDA_BUNDLE_TARGETS.md  DEV_BUILD.md  DEV_DOCS_STATUS.md  INJECTION_RECTANGLE_PLAN.md  INTERFACE_DESIGN_POLICY.md  IPC_PROTOCOL.md  LINUX_INSTALLATION.md  LINUX_PACKAGING.md  PRESET_FORMAT.md  PYTORCH_BUNDLING_NOTES.md  README.md  RELEASE_PROCESS.md  RESEARCH_IDEAS.md  TESTING.md  devlog.md  handover_distribution_session.md  handover_session10.md  handover_session11.md  handover_session12.md  handover_session13.md  handover_session14.md  handover_session17_alignment_fix.md  handover_session17_bpm_sync.md  handover_session9.md  portierung_session5_audit.md
docs/marketing/: T5YNTH_v1.7.0-beta.1_MARKETING_KIT.md  UCDCAE_AI_Lab_Wordmark_CD.md
docs/releases/: build_macos_installation_pdf.py  build_macos_installation_pdf_en.py
installer/linux/: build_deb.sh  build_rpm.sh  stage_backend_bundle.sh  t5ynth-preflight.sh  t5ynth-wrapper.sh  t5ynth.desktop.in
installer/macos/: build_pkg.sh  distribution.xml
installer/macos/resources/: welcome.html
installer/macos/scripts/: postinstall
installer/macos/scripts-standalone/: preinstall
installer/windows/: t5ynth.iss
resources/: T5ynth_Guide.html
resources/presets/: DEMO T5-Oscillator-Drift.t5p  INIT.t5p
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/backend/: BackendConnection.cpp  BackendConnection.h  BackendManager.cpp  BackendManager.h  GenerationRequest.cpp  GenerationRequest.h  ModelDownloader.cpp  ModelDownloader.h  SemanticAxes.cpp  SemanticAxes.h
src/dsp/: ADSREnvelope.cpp  ADSREnvelope.h  AlgorithmicReverb.cpp  AlgorithmicReverb.h  AudioLooper.cpp  AudioLooper.h  BlockParams.h  ConvolutionReverb.cpp  ConvolutionReverb.h  CutoffWarpFilter.h  DelayLine.cpp  DelayLine.h  DriftLFO.cpp  DriftLFO.h  LFO.cpp  LFO.h  Limiter.cpp  Limiter.h  ModulationMatrix.cpp  ModulationMatrix.h  MoogLadderFilter.h  NoiseGenerator.cpp  NoiseGenerator.h  SamplePlayer.cpp  SamplePlayer.h  StateVariableFilter.cpp  StateVariableFilter.h  SynthVoice.cpp  SynthVoice.h  Tuning.h  VoiceManager.cpp  VoiceManager.h  WavetableBank.cpp  WavetableBank.h  WavetableOscillator.cpp  WavetableOscillator.h
src/gui/: AxesPanel.cpp  AxesPanel.h  DimensionExplorer.cpp  DimensionExplorer.h  DriftPanel.cpp  DriftPanel.h  EffectsPanel.cpp  EffectsPanel.h  FxPanel.cpp  FxPanel.h  GuiHelpers.h  MainPanel.cpp  MainPanel.h  PresetManagerPanel.h  PresetPanel.cpp  PresetPanel.h  PromptPanel.cpp  PromptPanel.h  SavePresetDialog.h  SequencerPanel.cpp  SequencerPanel.h  SetupWizard.cpp  SetupWizard.h  StatusBar.cpp  StatusBar.h  SynthPanel.cpp  SynthPanel.h  T5ynthLookAndFeel.cpp  T5ynthLookAndFeel.h  WaveformDisplay.cpp  WaveformDisplay.h
src/inference/: PipeInference.cpp  PipeInference.h  T5ynthInference.cpp  T5ynthInference.h
src/presets/: PresetFormat.cpp  PresetFormat.h
src/sequencer/: Arpeggiator.cpp  Arpeggiator.h  EuclideanRhythm.h  GenerativeSequencer.cpp  GenerativeSequencer.h  ScaleQuantizer.h  StepSequencer.cpp  StepSequencer.h
tools/: compare_schedulers.py  dev_patch_pyinstaller_backend.py  export_to_torchscript.py  generate_reference.py  render_latent_morph_compare.py  setup_fedora42.sh  test_delay_damp  test_delay_damp.cpp  test_euler.py  test_inference.cpp  validate_original.py  validate_scheduler.py
